--- a/vms/ubuntu/Vagrantfile
+++ b/vms/ubuntu/Vagrantfile
@@ -52,7 +52,7 @@ Vagrant.configure("2") do |config|
   #
   config.vm.provider "virtualbox" do |vb|
      # Display the VirtualBox GUI when booting the machine
-     vb.gui = true
+     vb.gui = false
      vb.name = "ubuntu"
   
    # Customize the amount of memory on the VM:
