--- a/vms/ubuntu/Vagrantfile
+++ b/vms/ubuntu/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "generic/ubuntu2004"
+  config.vm.box = "ubuntu/bionic64 "
   config.vm.hostname = "ubuntu"
 
   # Disable automatic box update checking. If you disable this, then
