--- a/vms/kali/Vagrantfile
+++ b/vms/kali/Vagrantfile
@@ -14,6 +14,8 @@ Vagrant.configure("2") do |config|
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "kalilinux/rolling"
   config.vm.hostname = "kali"
+  config.ssh.username = "evb"
+  config.ssh.password = "admin"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
