--- a/vms/ubuntu/Vagrantfile
+++ b/vms/ubuntu/Vagrantfile
@@ -5,6 +5,8 @@
 # configures the configuration version (we support older styles for
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
+
+VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure("2") do |config|
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
@@ -12,8 +14,12 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "ubuntu/bionic64 "
+  config.vm.box = "ubuntu/focal64"
   config.vm.hostname = "ubuntu"
+  config.vm.boot_timeout = 600
+  # config.ssh.username = 'vagrant'
+  # config.ssh.password = 'vagrant'
+  # config.ssh.insert_key = false
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -33,7 +39,7 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+  config.vm.network "private_network", ip: "192.168.100.12"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -52,11 +58,17 @@ Vagrant.configure("2") do |config|
   #
   config.vm.provider "virtualbox" do |vb|
      # Display the VirtualBox GUI when booting the machine
-     vb.gui = false
-     vb.name = "ubuntu"
-  
+    vb.gui = false
+    vb.name = "ubuntu"
+
    # Customize the amount of memory on the VM:
-     vb.memory = "1024"
+    vb.memory = "2048"
+
+    vb.customize ["modifyvm", :id, "--uart1", "0x3F8", "4"]
+    vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    vb.customize ["modifyvm", :id, "--cableconnected1", "on"]
+    vb.customize ["modifyvm", :id, "--vram", "128"]
    end
   #
   # View the documentation for the provider you are using for more
@@ -71,3 +83,5 @@ config.vm.provision:shell, path: "bootstrap.sh"
   #   apt-get install -y apache2
   # SHELL
 end
+
+
